include/dss_capi.h

    /*
    Array of strings with all PVSystem names
    */
    DSS_CAPI_DLL void PVSystems_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as PVSystems_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void PVSystems_Get_AllNames_GR(void);
    /*
    Array of PVSYSTEM energy meter register names
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as PVSystems_Get_RegisterNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterNames_GR(void);
    /*
    Array of doubles containing values in PVSystem registers.
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterValues(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as PVSystems_Get_RegisterValues but using the global buffer interface for results
    */
    DSS_CAPI_DLL void PVSystems_Get_RegisterValues_GR(void);
    /*
    Set first PVSystem active; returns 0 if none.
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_First(void);
    /*
    Sets next PVSystem active; returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_Next(void);
    /*
    Number of PVSystems
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_Count(void);
    /*
    Get/set active PVSystem by index;  1..Count
    */
    DSS_CAPI_DLL int32_t PVSystems_Get_idx(void);
    /*
    Get/Set Active PVSystem by index:  1.. Count
    */
    DSS_CAPI_DLL void PVSystems_Set_idx(int32_t Value);
    /*
    Get the name of the active PVSystem
    */
    DSS_CAPI_DLL char* PVSystems_Get_Name(void);
    /*
    Set the name of the active PVSystem
    */
    DSS_CAPI_DLL void PVSystems_Set_Name(char* Value);
    /*
    Get the present value of the Irradiance property in W/sq-m
    */
    DSS_CAPI_DLL double PVSystems_Get_Irradiance(void);
    /*
    Set the present Irradiance value in W/sq-m
    */
    DSS_CAPI_DLL void PVSystems_Set_Irradiance(double Value);
    /*
    Get kvar value
    */
    DSS_CAPI_DLL double PVSystems_Get_kvar(void);
    /*
    Get Rated kVA of the PVSystem
    */
    DSS_CAPI_DLL double PVSystems_Get_kVArated(void);
    /*
    get kW output
    */
    DSS_CAPI_DLL double PVSystems_Get_kW(void);
    /*
    Get Power factor
    */
    DSS_CAPI_DLL double PVSystems_Get_PF(void);
    /*
    Set kva rated
    */
    DSS_CAPI_DLL void PVSystems_Set_kVArated(double Value);
    /*
    Set PF
    */
    DSS_CAPI_DLL void PVSystems_Set_PF(double Value);
    /*
    Set kvar output value
    */
    DSS_CAPI_DLL void PVSystems_Set_kvar(double Value);